# crust-of-rust-notes

./: .gitignore
10_fat_pointers_dispatch/: Cargo.toml
10_fat_pointers_dispatch/.devcontainer/: devcontainer.json
10_fat_pointers_dispatch/src/: lib.rs  other.rs
1_iterators/src/: lib.rs
2_cell/: Cargo.toml
2_cell/src/: lib.rs
3_channels/src/: lib.rs
4_sort/src/: bubblesort.rs  insertionsort.rs  selectionsort.rs
5_subtypes_variance/: Cargo.toml
6_drop_check/: Cargo.toml
7_atomics_ordering/src/: main.rs
asyncvid/: Cargo.toml
asyncvid/src/: main.rs
other_videos/arc_receiver/: Cargo.toml
other_videos/arc_receiver/src/: main.rs
other_videos/hazard_pointers/: Cargo.toml
other_videos/mywat/src/: main.rs
other_videos/mywat2/: Cargo.toml
other_videos/mywat2/src/: main.rs
other_videos/rtest/: Cargo.toml
other_videos/rtest/src/: main.rs
vid2/: Cargo.toml
vid3/src/: cell.rs  rc.rs  refcell.rs
vid5/: Cargo.toml
vid5/src/: lib.rs  quicksort.rs
vid6/src/: lib.rs
vid7/src/: main.rs
vid8/: Cargo.toml
vid8/src/: main.rs
vidfat/src/: lib.rs
