[package]
name = "mywat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
notify = "4.0.15"
tokio = {version = "1.9.0", features = ["full"]}
tower = {version = "0.4.8", features = ["full"]}
serde = {version = "1.0.130", features = ["derive", "std"]}
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
futures = "0.3.17"
clap = "3.0.0-beta.4"
crossbeam = "0.8.1"
rand = "0.8.4"
colour = "0.6.0"
